--- a/lesson_basic_14_sass/lesson_basic_4_sass/index.html
+++ b/lesson_basic_14_sass/lesson_basic_4_sass/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="thumbnail">
-      <img src="img.png" alt="laptop image">
+      <img src="https://cdn.hoanghamobile.com/Uploads/2024/08/14/bluetooth-sounarc-p2.png;trim.threshold=80;trim.percentpadding=0.5;width=138;height=180;mode=pad;" alt="laptop image">
     </div>
   </section>
   <!-- background -->
