--- a/lesson_basic_15_building_website/index.html
+++ b/lesson_basic_15_building_website/index.html
@@ -209,41 +209,96 @@
     </div>
   </section>
   <!-- Reader's Say -->
-  <section class="container-fluid mt-5">
+  <section class="container-fluid mt-5 reader">
     <h1>What our Reader's Say about us</h1>
     <p>lorem Ipsum dolor sit amet</p>
     <div class="container">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 flex-wrap">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img height="160px" src="./images/UI-face-left.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere iure adipisci harum
+                ducimus
+                accusantium, repudiandae aperiam voluptatum, id ex ratione omnis reiciendis possimus officiis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi vitae, tenetur quidem eum aliquid vel
+                labore sint placeat ad deserunt consectetur fugit ullam.</p>
+              <h4>Go somewhere</h4>
+              <h6>CEO at Google</h6>
             </div>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./images/UI-face-ở giữa.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere iure adipisci harum
+                ducimus
+                accusantium, repudiandae aperiam voluptatum, id ex ratione omnis reiciendis possimus officiis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi vitae, tenetur quidem eum aliquid vel
+                labore sint placeat ad deserunt consectetur fugit ullam.</p>
+              <h4>Go somewhere</h4>
+              <h6>CEO at Google</h6>
             </div>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img height="160px" src="./images/UI-face-right.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere iure adipisci harum
+                ducimus
+                accusantium, repudiandae aperiam voluptatum, id ex ratione omnis reiciendis possimus officiis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi vitae, tenetur quidem eum aliquid vel
+                labore sint placeat ad deserunt consectetur fugit ullam.</p>
+              <h4>Go somewhere</h4>
+              <h6>CEO at Google</h6>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container-fluid p-0">
+      <div class="row">
+        <div class="col-md-5 col-sm-5">
+          <h4 class="text-light">About us</h4>
+          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum maxime ea similique
+            illum corrupti</p>
+          <p class="text-muted">Copyright ©2019 All rights reserved | This template is made with by <span>Daily
+              Tuition</span> </p>
+        </div>
+        <div class="col-md-5 col-sm-12">
+          <h4 class="text-light">Newsletter</h4>
+          <p class="text-muted">Stay Updated</p>
+          <form class="form-inline">
+            <div class="pl-0">
+              <div class="input-group">
+                <input type="text" class="form-control bg-dark text-white" placeholder="Email">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">
+                    <i class="fas fa-arrow-right"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-md-2 col-sm-12">
+          <h4 class="text-light">Follow Us</h4>
+          <p class="text-muted">Let us be social</p>
+          <div class="text-light">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
